# notes2

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  render.yaml  versions.json
.github/: workflow_keep_render_alive_failure.md  workflow_packages_update_failure.md
.github/workflows/: keep_render_alive.yaml  packages_update.yml  poetry_update.yml  publish_render_pages.yaml
1.0/: 404.html  index.html
1.0/search/: search_index.json
1.0/tags/: index.html
1.0/tasks_list/: index.html
2.0/: 404.html  index.html
2.0/search/: search_index.json
2.0/tags/: index.html
2.0/tasks_list/: index.html
2025/03_Março/20250331_cursor_instalacao/: index.html
2025/04_Abril/20250403_ferramenta_gitdocify_com/: index.html
2025/04_Abril/20250403_github_actions_no_nivel_da_organizacao/: index.html
2025/04_Abril/20250403_linux_htop/: index.html
docs/: tasks_list.md
docs/2025/03_Março/: 20250311_como_criar_branch_vazia.md  20250313_como_criar_commit_vazio.md  20250313_post_the_github_streak_dilemma.md  20250314_como_modificar_mensagem_commit.md  20250315_como_inverter_a_ordem_de_commits.md  20250315_git_rebase_com_o_primeiro_commit.md  20250315_metodologia_start_stop.md  20250317_17109_imoveis_ofertados_pela_caixa_economica_em_setembro_2024.md  20250317_como_mudar_datetime_de_um_commit.md  20250317_cuidado_ao_modificar_commits_ja_enviados_para_github.md  20250318_livecode_datamart_qlikview.md  20250318_variaveis_de_ambiente_no_arquivo_mkdocs_yml_mkdocs.md  (+24 more)
scripts/: new_file.py
tags/: index.html
tasks_list/: index.html
tests/: test_new_file.py
(+20 files in other folders)
